# stt-server

./: .dockerignore  .gitignore  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.gpu-legacy  README.md  docker-compose.yml  main.py  pyproject.toml  run_server.py  start.sh
.github/workflows/: docker-build.yml
scripts/: install.ps1  install.sh
src/: __init__.py  cli.py  config.py  message_types.py  server.py  transcriber.py
