[project]
name = "obsidian-stt-server"
version = "0.1.0"
description = "Local speech-to-text server for Obsidian using Whisper. Runs on CPU or GPU."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kevin", email = "kevin@example.com"},
]
keywords = ["obsidian", "speech-to-text", "stt", "whisper", "transcription", "voice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "websockets>=12.0",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
cpu = [
    # CPU-only torch (smaller download)
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/obsidian-stt-server"
Documentation = "https://github.com/YOUR_USERNAME/obsidian-stt-server#readme"
Repository = "https://github.com/YOUR_USERNAME/obsidian-stt-server"
Issues = "https://github.com/YOUR_USERNAME/obsidian-stt-server/issues"

[project.scripts]
obsidian-stt-server = "src.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
